# kegelkasse

./: .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.github/: dependabot.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_invite_token_member.py  003_user_regular_member.py  004_user_username.py  005_user_avatar.py  006_club_teams.py  007_regular_member_is_guest.py  008_password_reset_token.py  009_penalty_log_unit_amount.py  010_penalty_log_regular_member.py  011_game_status_king.py  012_member_payments.py  013_game_per_point_penalty.py  014_template_per_point_penalty.py  015_push_subscriptions.py  016_club_expenses.py  017_payment_requests.py  018_scheduled_evenings.py  019_scheduled_evening_guests_and_evening_link.py  020_president_and_pins.py  021_pin_penalty_to_club_settings.py  022_scheduled_evening_time.py  023_club_settings_ical.py  024_user_push_preferences.py  025_evening_date_to_datetime.py  026_scheduled_evening_scheduled_at.py  027_penalty_log_game_id_on_delete_set_null.py  028_expense_date.py  029_scheduled_evening_soft_delete.py  030_evening_highlights.py  031_remove_president.py  032_regular_member_is_committee.py  033_club_announcement.py  034_club_trip.py  035_notification_log.py  036_notification_log_is_read.py  037_game_throw_log.py  038_game_throw_log_player.py  039_game_turn_mode.py  040_game_template_turn_mode.py  (+12 more)
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  backups.py  club.py  comments.py  committee.py  evenings.py  push.py  reports.py  schedule.py  season.py  stats.py  superadmin.py  sync.py  uploads.py
backend/app/core/: config.py  crypto.py  database.py  digest.py  email.py  events.py  i18n.py  push.py  reminders.py  scheduler.py  security.py
backend/app/models/: __init__.py  club.py  comment.py  committee.py  drink.py  evening.py  game.py  payment.py  penalty.py  push.py  schedule.py  season.py  user.py
backend/app/scripts/: create_admin.py  generate_secret_key.py  generate_vapid.py
backend/app/services/: backup.py
backend/scripts/: gen_vapid.py
backend/tests/: conftest.py  test_auth.py  test_backups.py  test_club.py  test_club_extended.py  test_comments.py  test_committee.py  test_digest.py  test_email.py  test_evenings.py  test_evenings_extended.py  test_games.py  test_push_core.py  test_push_routes.py  test_reminders.py  test_reports.py  test_schedule.py  test_schedule_extended.py  test_season.py  test_stats.py  test_superadmin.py  test_sync.py  test_treasury.py  test_uploads.py
docs/: sidebars.ts  (+2 more)
(+227 files in other folders)
