[tool.poetry]
name = "kegelkasse"
version = "1.0.0"
description = "Kegelkasse Kegelclub Manager backend"
authors = ["Marius Gassen"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.135.1"
uvicorn = {version = "^0.41.0", extras = ["standard"]}
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
bcrypt = "5.0.0"
python-multipart = "^0.0.22"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
httpx = "^0.28.1"
ruff = "^0.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"