[tool.poetry]
name = "kegelkasse"
version = "1.0.0"
description = "Kegelkasse Kegelclub Manager backend"
authors = ["Marius Gassen"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.135.2"
uvicorn = {version = "^0.41.0", extras = ["standard"]}
sqlalchemy = {version = "^2.0.35", extras = ["asyncio"]}
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.30.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
bcrypt = "5.0.0"
python-multipart = "^0.0.22"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
httpx = "^0.28.1"
pywebpush = "^2.0.0"
ruff = "^0.15.6"
greenlet = "^3.3.2"
babel = "^2.18.0"
apscheduler = "^3.10"
openpyxl = "^3.1"
fpdf2 = "^2.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
genbadge = {version = "^1.1", extras = ["coverage"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E701: inline raises are used intentionally throughout the API layer
# E711/E712: SQLAlchemy filter comparisons (== None, == True, == False) are correct ORM syntax
# E741: 'l' used for locale in i18n helpers
ignore = ["E701", "E711", "E712", "E741"]
